# arrayNodes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arrayNodes.mod
arrayNodes/plug-ins/macos-maya2017/: arrayNodes.bundle
arrayNodes/scripts/: AEremapArrayValuesTemplate.mel
docs/: array_constructor_node.html  array_iterator_node.html  array_multi_operator_node.html  array_scalar_operator_node.html  chain_arrays_node.html  clamp_array_node.html  index.html  modify_array_node.html  normalize_array_node.html  reduce_array_node.html  remap_array_values_node.html  slice_array_node.html
plug-ins/windows-maya2014/: arrayNodes.mll
plug-ins/windows-maya2015/: arrayNodes.mll
plug-ins/windows-maya2016/: arrayNodes.mll
scripts/: AEremapArrayValuesTemplate.mel
src/: CMakeLists.txt  n_chain.cpp  n_chain.h  n_clamp.cpp  n_clamp.h  n_ctor.cpp  n_ctor.h  n_ctorAngle.cpp  n_ctorAngle.h  n_iter.cpp  n_iter.h  n_iterAngle.cpp  n_iterAngle.h  n_modify.cpp  n_modify.h  n_multi.cpp  n_multi.h  n_normalize.cpp  n_normalize.h  n_reduce.cpp  n_reduce.h  n_remap.cpp  n_remap.h  n_scalar.cpp  n_scalar.h  n_slice.cpp  n_slice.h  pluginMain.cpp  utils.cpp  utils.h
